[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chrono = "0.4.31"
fake = { version = "2.9.2", features = ["derive", "chrono", "serde_json"] }
lazy_static = "1.4.0"
minijinja = "0.32.1"
rand = "0.8"
regex = "1.10.2"
reqwest = "0.11.23"
serde = "1.0.194"
serde_json = "1.0.109"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "uuid",
  "json",
  "chrono",
  "sqlite",
  "offline",
  "migrate",
] }
tokio = { version = "1.35.1", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
