[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chrono = "0.4.31"
fake = { version = "2.9.2", features = ["derive", "chrono", "serde_json"] }
lazy_static = "1.4.0"
minijinja = "2.1.2"
rand = "0.8"
regex = "1.10.2"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-native-tls",
  "uuid",
  "json",
  "chrono",
  "sqlite",
  "migrate",
] }
tokio = { version = "1.35.1", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
