[package]
name = "xddmod"
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2021"

[lib]
name = "xddmod"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-recursion = "1.0.5"
axum = "0.6.20"
chrono = { workspace = true }
chrono-tz = "0.8.4"
config = "0.13.3"
fake = { workspace = true }
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = { workspace = true }
minijinja = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
timeago = "0.4.2"
tokio = { workspace = true }
tower = "0.4.13"
twitch_api = { version = "0.7.0-rc.7", features = [
  "twitch_oauth2",
  "helix",
  "reqwest",
  "typed-builder",
] }
twitch_types = { version = "0.4.3", features = ["time"] }
twitch-irc = { git = "https://github.com/Retoon/twitch-irc-rs", "branch" = "reply_parent_feature", features = [
  "with-serde",
  "refreshing-token-native-tls",
] }
unicode-segmentation = "1.9.0"
url = { workspace = true }
webbrowser = "0.8.12"
