[package]
name = "xtask"
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4.11", features = ["derive"] }
xddmod = { path = "../xddmod" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
